# zygen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust_ci.yml
src/: core.rs  desc.rs  discovery.rs  exec.rs  list.rs  main.rs  supported_apis.rs  update.rs
src/flavors/: core_flavors.rs  desc_flavors.rs  mod.rs  update_flavors.rs
tests/test_data/: container_v1_nested.json
