[package]
name = "zygen"
description = "Zeroth Genotype CLI for Google Cloud APIs"
version = "0.9.0"
edition = "2021"
rust-version = "1.80.1" # The minimal supported Rust version
authors = ["Takuya Hashimoto <htk@google.com>"]

[[bin]]
name = "zg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
prettytable-rs = "^0.10"
rand = "0.8.5"
regex = "1.0.0"
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "logging", "ring"] }
rustls = "0.23"
webpki-roots = "0.26"
http-body-util = "0.1"
bytes = "1.0"
rmp = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
tokio = { version = "1.40.0", features = ["full"]}
url = "2.5.2"
urlencoding = "2.1.3"

[target.'cfg(target_os="linux")'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[profile.release]
strip = true
